deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: uhd-mcp
  namespace: mcp-services
  uid: f47c99c6-28a9-4457-a9c1-71d0da1003f2
  resourceVersion: '1113235713'
  generation: 31
  creationTimestamp: '2025-07-15T23:22:20Z'
  annotations:
    deployment.kubernetes.io/revision: '8'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2025-07-16T16:16:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
            'f:spec':
              'f:containers':
                'k:{"name":"container"}':
                  .: {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2025-07-16T18:53:39Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
      subresource: status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uhd-mcp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uhd-mcp
    spec:
      securityContext:
        runAsUser: 1011
        runAsGroup: 1011
        fsGroup: 1011
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/deployment-pipeline/mcp-uhd:latest'
          command: ["./start.sh"]
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 31
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2025-07-16T18:49:06Z'
      lastTransitionTime: '2025-07-15T23:22:20Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "uhd-mcp-6d49d6c97f" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2025-07-16T18:53:39Z'
      lastTransitionTime: '2025-07-16T18:53:39Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
